k8s/kustomize/mongodb/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb
  labels:
    istio-injection: enabled
