k8s/kustomize/mongodb/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mongodb-node
  namespace: mongodb
spec:
  hosts:
    - "localhost"
  gateways:
    - istio-ingress/http-gateway
  http:
    - match:
        - uri:
            prefix: /mongodb-node
      route:
        - destination:
            host: mongo-express.mongodb.svc.cluster.local
            port:
              number: 8081
